fixed footer alignment

--- a/themes/tartan/static/css/main.css
+++ b/themes/tartan/static/css/main.css
@@ -612,7 +612,7 @@ hr {
   }
 
   #footer ul {
-    display: inline-block;
+    display: inline;
     text-align: center;
   }
 }
